# maling-bot

./: .dockerignore  .env.dev  .gitignore  Dockerfile  README.md  compose.yaml  config.py  main.py  pyproject.toml  requirements.txt
services/userbot/: __init__.py  bot.py
templates/: form.html
